@@ -1,0 +1,53 @@
+This file contains message digests of all files listed in MANIFEST,
+signed via the Module::Signature module, version 0.61.
+
+To verify the content in this distribution, first make sure you have
+Module::Signature installed, then type:
+
+    % cpansign -v
+
+It will check each file's integrity, as well as the signature's
+validity.  If "==> Signature verified OK! <==" is not displayed,
+the distribution may already have been compromised, and you should
+not run its Makefile.PL or Build.PL.
+
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+SHA1 9e9eba8a1db83cacbc93b795fbfae4906b0c157d ChangeLog
+SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
+SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
+SHA1 59c3cb1b363a092558eacfaad59246aef64f223d META.yml
+SHA1 d5768eab38208592d285bf7d6cc61a5e59b9dd73 Makefile.PL
+SHA1 8af1a79720895de6dd7dc0f88ed6e07c20e84f2d README
+SHA1 e35a6b8211b5545bb456da0049135608b77ad112 bin/fullauto.pl
+SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
+SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
+SHA1 ca13d9875e1249f6e84f7070be8152c34837955e inc/Module/Install/AutoInstall.pm
+SHA1 129960509127732258570c122042bc48615222e1 inc/Module/Install/Base.pm
+SHA1 cf3356ed9a5bd2f732527ef9e7bc5ef4458c8a93 inc/Module/Install/Can.pm
+SHA1 bf0a3e1977effc2832d7a813a76dce3f31b437b6 inc/Module/Install/Fetch.pm
+SHA1 b501b0df59a5cd235cca473889f82c3d3429f39e inc/Module/Install/Include.pm
+SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
+SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
+SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
+SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
+SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
+SHA1 917951b54723bb310fa768c6e2ade32ca555df05 lib/Net/FullAuto.pm
+SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
+SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
+SHA1 c312c49b9b45e407e8deb9b4703e5c2aa8e71fc3 lib/Net/FullAuto/Distro/fa_code.pm
+SHA1 c4c9133e17f1b8dcbd352a15717478c75684e469 lib/Net/FullAuto/Distro/fa_conf.pm
+SHA1 de4dcc81108393e77dacd2f131e7513956d79b8b lib/Net/FullAuto/Distro/fa_host.pm
+SHA1 8bf3902c4ee7bad312fc9c7d11de8e8578b472ec lib/Net/FullAuto/Distro/fa_maps.pm
+SHA1 23e8ebc4ed61ba4c578504c9b440c86889626e2f lib/Net/FullAuto/Distro/fa_menu.pm
+SHA1 2ed2653ea5525bf0d206a195a08610975863354e lib/Net/FullAuto/FA_Core.pm
+SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
+SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.9 (Cygwin)
+
+iEYEARECAAYFAkyCvYwACgkQdsVAdUjO9Il0hACfUI4kl4l4LdErLaff97COkilk
+otUAnivNm9eVi3c8KvrZRy/uudFlK7jY
+=S6iP
+-----END PGP SIGNATURE-----
