@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.39';
+our $VERSION='0.40';
 
 
 use 5.005;
